--- a/pages/covid19sjc/public/style.css
+++ b/pages/covid19sjc/public/style.css
@@ -1,40 +1,131 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap');
 
-body {  
-    background: #1D1F20;
-    padding: 16px;
+html {
+    height: 100%;
     font-family: 'Roboto Condensed', sans-serif;
-    text-align: center
+
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    text-align: center;
+
+    --bg: whitesmoke;
+    --bg-panel: #EBEBEB;
+    --color-headings: #4287f5;
+    --color-text: #1D1F20;
 }
 
-h1, h4, h6, p {
-    color: white
+body {  
+    background-color: var(--bg);
 }
 
-a {
-    text-decoration: none;
-    color: #5e8c80
+.container {
+    background-color: var(--bg);
+    
+    grid-template-columns: 80% auto;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+    "title switch"
+    "content content"
+    ;
 }
 
-a:active {
-    color: greenyellow
-}
-
-a:hover {
-    color: #6edcbf
-}
-
-a:visited {
-    color: #4287f5
-}
-
-canvas {
-    border: 1px dotted whitesmoke
-}
-  
 .chart-container {
     position: relative;
     margin: auto;
     height: 80vh;
-    width: 80vw
+    width: 80vw;
+}
+
+h1 {
+    margin: 15px;
+    color: var(--color-headings);
+}
+
+h4 {
+    margin: 15px;
+    color: var(--color-text);
+}
+
+h6 {
+    margin: 15px;
+    color: var(--color-text);
+}
+
+p {
+    color: var(--color-text);
+    grid-area: content;
+    font-size: 1.1em;
+    line-height: 1.8em;
+    margin-top: 2em;
+}
+
+a {
+    text-decoration: none;
+    color: #a8c5bd;
+}
+
+a:active {
+    color: greenyellow;
+}
+
+a:hover {
+    color: #6edcbf;
+}
+
+a:visited {
+    color: var(--color-headings);
+}
+
+canvas {
+    /* border: 1px dotted whitesmoke */
+    border: 1px dotted var(--color-text);
+}
+
+.toggle {
+    display: table;
+    margin: auto;
+    padding: 10px;
+}
+
+input[type=checkbox] {
+    height: 0;
+    width: 0;
+    visibility: hidden;
+}
+
+label {
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 52px;
+    height: 27px;
+    background: grey;
+    float: right;
+    border-radius: 100px;
+    position: relative;
+}
+
+label::after {
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 20px;
+    height: 20px;
+    background-color: #EBEBEB;
+    border-radius: 90px;
+    transition: 0.3s;
+}
+
+input:checked + label {
+    background-color: #4287f5;
+}
+
+input:checked + label::after {
+    left: calc(100% - 5px);
+    transform: translateX(-100%);
+}
+
+label:active:after {
+    width: 45px;
 }
